syntax = "proto3";

package mail;

option go_package = "/proto/mail";

service MailService {
  rpc ScheduleMail (ScheduleMailReq) returns (ScheduleMailRes) {}
  rpc GetTemplates (ListTemplateReq) returns (ListTemplateRes) {}
}

enum SchedulePriority {
  lowest = 0;
  low = 1;
  normal = 2;
  high = 3;
  highest = 4;
}

message MailInfo {
  repeated string to_addresses = 1;
  repeated string cc_addresses = 2;
  repeated string bcc_addresses = 3;
  string template = 5;
  string template_data = 6;
}

message ScheduleMailReq {
  string name = 1;
  SchedulePriority priority = 2;
  string time = 3;
  int32 max_retry = 4;
  MailInfo mail_info = 5;
}

message ScheduleMailRes {
  string job_id = 1;
  string msg = 2;
}

message ListTemplateReq {

}

message ListTemplateRes {
  repeated Template templates = 1;
}

message Template {
  string name = 1;
  string subject = 2;
  string validation = 3;
}